--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -59,7 +59,7 @@
                     <h1 class="pg-title position">
                         skill
                     </h1>
-                    <div class="grids aligncenetr">
+                    <div class="grids aligncenter">
 
 
                         <div class="columns">
@@ -102,7 +102,7 @@
                 <h1 class="pg-title position">
                     project
                 </h1>
-                <div class="project-grid verticalalign">
+                <div class="project-grid aligncenter">
 
                     <!-- project 1 -->
                     <div class="project-column">
@@ -110,8 +110,14 @@
                         <div class="empty">
 
                         </div>
+                        <div class="img-cover"></div>
                         <div class="project-content">
-
+                            <div class="content">
+                                <h3>
+                                    Creative Portfolio
+                                </h3>
+                                <a href="https://ashim-bhatta.github.io/project/damnnnnnn" target="_blank"> Demo</a>
+                            </div>
                         </div>
                     </div>
 
@@ -121,8 +127,14 @@
                         <div class="empty">
 
                         </div>
+                        <div class="img-cover"></div>
                         <div class="project-content">
-
+                            <div class="content">
+                                <h3>
+                                    Rock Paper Scissor
+                                </h3>
+                                <a href="https://ashim-bhatta.github.io/project/rock-paper-scissor" target="_blank"> Demo</a>
+                            </div>
                         </div>
                     </div>
 
@@ -132,8 +144,14 @@
                         <div class="empty">
 
                         </div>
+                        <div class="img-cover"></div>
                         <div class="project-content">
-
+                            <div class="content">
+                                <h3>
+                                    Singer Web
+                                </h3>
+                                <a href="https://ashim-bhatta.github.io/project/singer-web" target="_blank"> Demo</a>
+                            </div>
                         </div>
                     </div>
 
@@ -143,8 +161,14 @@
                         <div class="empty">
 
                         </div>
+                        <div class="img-cover"></div>
                         <div class="project-content">
-
+                            <div class="content">
+                                <h3>
+                                    Song Lyrics
+                                </h3>
+                                <a href="https://ashim-bhatta.github.io/project/song-lyrics" target="_blank"> Demo</a>
+                            </div>
                         </div>
                     </div>
 
@@ -154,24 +178,38 @@
                         <div class="empty">
 
                         </div>
+                        <div class="img-cover"></div>
                         <div class="project-content">
-
+                            <div class="content">
+                                <h3>
+                                    Creative
+                                </h3>
+                                <a href="https://ashim-bhatta.github.io/project/creative" target="_blank"> Demo</a>
+                            </div>
                         </div>
                     </div>
 
-                    <!-- project 5 -->
+                    <!-- project 6 -->
                     <div class="project-column">
                         <img src="./img/project/recipe-app.png" alt="">
                         <div class="empty">
 
                         </div>
+                        <div class="img-cover"></div>
                         <div class="project-content">
-
+                            <div class="content">
+                                <h3>
+                                    Recipe App
+                                </h3>
+                                <a href="https://github.com/ashim-bhatta/project/tree/master/creative" target="_blank"> Demo</a>
+                            </div>
                         </div>
                     </div>
                 </div>
                 </div>
             </section>
+
+
 
         </article>
     </main>
