--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -15,6 +15,7 @@
 <body>
     <main role="main">
         <article id="webslides" class="horizontal">
+            <!----------------------- slide 1------------------- -->
             <section class="home">
                 <div class="wrap aligncenter">
 
@@ -25,7 +26,7 @@
                     </div>
                 </div>
             </section>
-
+            <!-- -----------------------slide 3-------------------------- -->
             <section class="about">
 
                 <div class="wrap">
@@ -94,123 +95,236 @@
                 </div>
 
             </section>
+
+            <!------------------------- slide 4----------------------- -->
             <section class="project">
 
-                <!-- <div class="wrap"> -->
+                <div class="wrap">
 
 
-                <h1 class="pg-title position">
-                    project
-                </h1>
-                <div class="project-grid aligncenter">
+                    <h1 class="pg-title position">
+                        project
+                    </h1>
+                    <div class="project-grid aligncenter">
 
-                    <!-- project 1 -->
-                    <div class="project-column">
-                        <img src="./img/project/creative-portfolio.png" alt="">
-                        <div class="empty">
+                        <!-- project 1 -->
+                        <div class="project-column">
+                            <img src="./img/project/creative-portfolio.png" alt="">
+                            <div class="empty">
 
+                            </div>
+                            <div class="img-cover"></div>
+                            <div class="project-content">
+                                <div class="content">
+                                    <h3>
+                                        Creative Portfolio
+                                    </h3>
+                                    <a href="https://ashim-bhatta.github.io/project/damnnnnnn" target="_blank"> Demo</a>
+                                </div>
+                            </div>
                         </div>
-                        <div class="img-cover"></div>
-                        <div class="project-content">
-                            <div class="content">
-                                <h3>
-                                    Creative Portfolio
-                                </h3>
-                                <a href="https://ashim-bhatta.github.io/project/damnnnnnn" target="_blank"> Demo</a>
+
+                        <!-- project 2 -->
+                        <div class="project-column">
+                            <img src="./img/project/rock-paper-scissor.png" alt="">
+                            <div class="empty">
+
+                            </div>
+                            <div class="img-cover"></div>
+                            <div class="project-content">
+                                <div class="content">
+                                    <h3>
+                                        Rock Paper Scissor
+                                    </h3>
+                                    <a href="https://ashim-bhatta.github.io/project/rock-paper-scissor" target="_blank"> Demo</a>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- project 3 -->
+                        <div class="project-column">
+                            <img src="./img/project/singer-portfolio.png" alt="">
+                            <div class="empty">
+
+                            </div>
+                            <div class="img-cover"></div>
+                            <div class="project-content">
+                                <div class="content">
+                                    <h3>
+                                        Singer Web
+                                    </h3>
+                                    <a href="https://ashim-bhatta.github.io/project/singer-web" target="_blank"> Demo</a>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- project 4 -->
+                        <div class="project-column">
+                            <img src="./img/project/song-lyrics.png" alt="">
+                            <div class="empty">
+
+                            </div>
+                            <div class="img-cover"></div>
+                            <div class="project-content">
+                                <div class="content">
+                                    <h3>
+                                        Song Lyrics
+                                    </h3>
+                                    <a href="https://ashim-bhatta.github.io/project/song-lyrics" target="_blank"> Demo</a>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- project 5 -->
+                        <div class="project-column">
+                            <img src="./img/project/creative.png" alt="">
+                            <div class="empty">
+
+                            </div>
+                            <div class="img-cover"></div>
+                            <div class="project-content">
+                                <div class="content">
+                                    <h3>
+                                        Creative
+                                    </h3>
+                                    <a href="https://ashim-bhatta.github.io/project/creative" target="_blank"> Demo</a>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- project 6 -->
+                        <div class="project-column">
+                            <img src="./img/project/recipe-app.png" alt="">
+                            <div class="empty">
+
+                            </div>
+                            <div class="img-cover"></div>
+                            <div class="project-content">
+                                <div class="content">
+                                    <h3>
+                                        Recipe App
+                                    </h3>
+                                    <a href="https://github.com/ashim-bhatta/project/tree/master/creative" target="_blank"> Demo</a>
+                                </div>
                             </div>
                         </div>
                     </div>
-
-                    <!-- project 2 -->
-                    <div class="project-column">
-                        <img src="./img/project/rock-paper-scissor.png" alt="">
-                        <div class="empty">
-
-                        </div>
-                        <div class="img-cover"></div>
-                        <div class="project-content">
-                            <div class="content">
-                                <h3>
-                                    Rock Paper Scissor
-                                </h3>
-                                <a href="https://ashim-bhatta.github.io/project/rock-paper-scissor" target="_blank"> Demo</a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- project 3 -->
-                    <div class="project-column">
-                        <img src="./img/project/singer-portfolio.png" alt="">
-                        <div class="empty">
-
-                        </div>
-                        <div class="img-cover"></div>
-                        <div class="project-content">
-                            <div class="content">
-                                <h3>
-                                    Singer Web
-                                </h3>
-                                <a href="https://ashim-bhatta.github.io/project/singer-web" target="_blank"> Demo</a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- project 4 -->
-                    <div class="project-column">
-                        <img src="./img/project/song-lyrics.png" alt="">
-                        <div class="empty">
-
-                        </div>
-                        <div class="img-cover"></div>
-                        <div class="project-content">
-                            <div class="content">
-                                <h3>
-                                    Song Lyrics
-                                </h3>
-                                <a href="https://ashim-bhatta.github.io/project/song-lyrics" target="_blank"> Demo</a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- project 5 -->
-                    <div class="project-column">
-                        <img src="./img/project/creative.png" alt="">
-                        <div class="empty">
-
-                        </div>
-                        <div class="img-cover"></div>
-                        <div class="project-content">
-                            <div class="content">
-                                <h3>
-                                    Creative
-                                </h3>
-                                <a href="https://ashim-bhatta.github.io/project/creative" target="_blank"> Demo</a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- project 6 -->
-                    <div class="project-column">
-                        <img src="./img/project/recipe-app.png" alt="">
-                        <div class="empty">
-
-                        </div>
-                        <div class="img-cover"></div>
-                        <div class="project-content">
-                            <div class="content">
-                                <h3>
-                                    Recipe App
-                                </h3>
-                                <a href="https://github.com/ashim-bhatta/project/tree/master/creative" target="_blank"> Demo</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
                 </div>
             </section>
+            <!-- ---------------------------slide 5 ---------------------------->
+            <section class="contact">
+                <div class="wrap">
+                    <h1 class="pg-title">
+                        contact
+                    </h1>
+                    <div class="contact-grid aligncenter">
+                        <div class="contact-column bg-1">
+                            <div class="contact-info">
+                                <h1>
+                                    Get in touch
+                                </h1>
+                                <p>
+                                    My DM is always open for a good cup of coffee.
+                                </p>
+                                <div class="email">
+                                    <summary>
+                                        Email
+                                    </summary>
+                                    <p>
+                                        ASHIM.BHATTA000@GMAIL.COM
+                                    </p>
+                                </div>
+                                <div class="num">
+                                    <summary>
+                                        Phone
+                                    </summary>
+                                    <p>
+                                        +977 9823345038
+                                    </p>
+                                </div>
+                                <div class="social">
+                                    <a href="" target="_blank">
+                                        <img src="./img/social/instagram.svg" alt="Instagram logo">
+                                    </a>
+                                    <a href="" target="_blank">
+                                        <img src="./img/social/github.svg" alt="Github logo">
+                                    </a>
+                                    <a href="" target="_blank">
+                                        <img src="./img/social/linkedin.svg" alt="Linkedin logo">
+                                    </a>
+                                </div>
 
-            <section>
+                            </div>
+                        </div>
+                        <div class="contact-column bg-2">
+                            <div id="close" onclick="closeOption()">
+                                <img src="./img/x-circle .svg" alt="" onclick="closeOption()">
+                            </div>
+                            <div class="option" id="option">
+                                <div>
+                                    <h1> Let's talk</h1>
 
+                                    <p>
+                                        About
+                                    </p>
+                                    <form>
+                                        <span>
+                                        <input type="radio" name="talkOption" onclick={x=value} value="project" id="project" required='required'>
+                                        <label for="project">Your great project</label>
+                                    </span>
+                                        <span>
+                                        <input type="radio" name="talkOption" onclick={x=value} value="coffee" id="coffee">
+                                        <label for="coffee">Meeting for a coffee</label>
+                                    </span>
+
+                                        <span>
+                                        <input type="radio" name="talkOption" onclick={x=value} value="hire" id="hire">
+                                        <label for="hire">Want to hire you</label>
+                                    </span>
+                                        <button id="nxtBtn">next</button>
+
+                                    </form>
+                                </div>
+                            </div>
+                            <div id="for-project">
+                                <div class="form">
+                                    <h1>Tell me about your project.</h1>
+                                    <form action="" autocomplete="off">
+                                        <h2>Personal Detail</h2>
+                                        <input type="text" placeholder="Name">
+                                        <input type="email" name="email" placeholder="Email">
+                                        <textarea name="projectName" placeholder="Tell me about your project..."></textarea>
+                                    </form>
+                                </div>
+                            </div>
+                            <div id="for-coffee">
+
+                                <div class="form" autocomplete="off">
+                                    <h1>I do like coffee to...</h1>
+                                    <form action="">
+                                        <h2>Personal Detail</h2>
+                                        <input type="text" placeholder="Name">
+                                        <input type="email" name="email" placeholder="Email">
+                                        <textarea name="projectName" placeholder="What do you want to talk about..."></textarea>
+                                    </form>
+                                </div>
+                            </div>
+                            <div id="for-hire">
+                                <div class="form">
+                                    <h1>ohh yeah you can hire me</h1>
+                                    <form action="" autocomplete="off">
+                                        <h2>company Detail</h2>
+                                        <input type="text" placeholder="company Name">
+                                        <input type="email" name="email" placeholder="company Email">
+                                        <textarea name="projectName" placeholder="Post detail..."></textarea>
+                                    </form>
+                                </div>
+
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
             </section>
 
 
@@ -219,6 +333,7 @@
     </main>
 
     <script src="./js/webslides.js"></script>
+    <script src="./js/skill.js"></script>
     <script src="./js/main.js"></script>
     <script>
         window.ws = new WebSlides();
