--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -243,13 +243,13 @@
                                     </p>
                                 </div>
                                 <div class="social">
-                                    <a href="" target="_blank">
+                                    <a href="https://www.instagram.com/ashim_bhatta/" target="_blank">
                                         <img src="./img/social/instagram.svg" alt="Instagram logo">
                                     </a>
-                                    <a href="" target="_blank">
+                                    <a href="https://www.github.com/ashim-bhatta/" target="_blank">
                                         <img src="./img/social/github.svg" alt="Github logo">
                                     </a>
-                                    <a href="" target="_blank">
+                                    <a href="https://www.linkedin.com/in/ashim-bhatta-76122b183/" target="_blank">
                                         <img src="./img/social/linkedin.svg" alt="Linkedin logo">
                                     </a>
                                 </div>
