--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hori</title>
+    <title>Ashim Bhatta</title>
     <link rel="stylesheet" href="./css/webslides.css">
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Chango&display=swap" rel="stylesheet">
