--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -47,7 +47,7 @@
 
                             </p>
                             <p>
-                                Outside of programming, I enjoy watching movie, sketching.
+                                Outside of programming, I enjoy watching movie.
                             </p>
                         </div>
 
@@ -279,7 +279,7 @@
 
                                         <span>
                                         <input type="radio" name="talkOption" onclick={x=value} value="hire" id="hire">
-                                        <label for="hire">Want to hire you</label>
+                                        <label for="hire">Want to hire me</label>
                                     </span>
                                         <button id="nxtBtn">next</button>
 
